att-layout-slide-responsivo

--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
                     <img src="./imagens/assets/vira_lata.png" alt="vira-lata" width="400vw">
                     <div>
                         <h2>Vira Lata</h2>
-                        <span id="text-vira-lata" class="ingredientes">E no nosso Vira Lata tem aquele espetinho de churrasco, duas calabresas,
+                        <p id="text-vira-lata" class="ingredientes">E no nosso Vira Lata tem aquele espetinho de churrasco, duas calabresas,
                             bacon em
                             tiras, pão d'água,
                             pure de batata, molho especial, barbecue, tomate defumado com orégano,
-                            ovo cozido, batata palha, salsa verde e queijo mussarela escamado.</span>
+                            ovo cozido, batata palha, salsa verde e queijo mussarela escamado.</p>
                     </div>
                     <div>
                         <button class="button-add">Adicionar</button>
@@ -378,6 +378,11 @@
                         </div>
                         <div class="card-back">
                             <h2>Vira Lata</h2>
+                            <p id="text-vira-lata" class="ingredientes">E no nosso Vira Lata tem aquele espetinho de churrasco, duas calabresas,
+                                bacon em
+                                tiras, pão d'água,
+                                pure de batata, molho especial, barbecue, tomate defumado com orégano,
+                                ovo cozido, batata palha, salsa verde e queijo mussarela escamado.</p>
                             <div>
                                 <button class="btn-card">Volta</button>
                                 <button class="btn-card">Adicionar</button>
@@ -409,8 +414,9 @@
     </footer>
     <span id="contatos">La Casa Do Dog @ 2023 | Todos os direitos reservados</span>
 
-    <script type="module" src="./script/script2.js"></script>
     <script src="/script/script.js"></script>
+    <script type="module" src="./script/script2.js"></script>
+
     
 </body>
 
